--- a/doc/todo/l10n.mdwn
+++ b/doc/todo/l10n.mdwn
@@ -83,4 +83,17 @@ could probably be automated even more - but an obstacle seems to be that content
 separately but as an integral part of upstream source (GIT seems to not support subscribing to
 only parts of a repository).
 
+For example use, here's how to roll out a clone of the [Redpill support site](http://support.redpill.dk/):
+
+    mkdir -p ~/private_webdata
+    git clone http://source.tedpill.dk/support.git ~/private_webdata/support.redpill.dk
+    cd ~/private_webdata/support.redpill.dk
+    make
+    mkdir -p ~/public_websites/support.redpill.dk
+    mkdir -p ~/public_websites/source.redpill.dk/support_redpill_content.git/hooks
+    mkdir -p ~/public_cgi/support.redpill.dk
+    make install
+
+(Redpill support is inspired by <http://help.riseup.net> but needs to be reusable for several similarly configured networks)
+
 --[[JonasSmedegaard]]
