--- a/doc/todo/language_definition_for_the_meta_plugin.mdwn
+++ b/doc/todo/language_definition_for_the_meta_plugin.mdwn
@@ -78,5 +78,7 @@ This may be useful for sites with a few pages in different languages, but no ful
  } # }}}
 </pre>
 
+> Please resolve lang somewhere reusable rather than within meta plugin: It is certainly usable outside
+> the scope of the meta plugin as well. --[[JonasSmedegaard]]
 
 [[tag wishlist patch plugins/meta translation]]
