web commit by http://arpitjain11.myopenid.com/

--- a/doc/plugins/contrib/gallery/discussion.mdwn
+++ b/doc/plugins/contrib/gallery/discussion.mdwn
@@ -20,6 +20,7 @@ When using `vcs="1"` it's no better:
 
 --[[tschwinge]]
 
+Its probably because of the restriction of permissions by plugins in newer version of IkiWiki. 
 For the time being, you can turn resizing off till I look into conditional underlay directory feature. 
 
 USAGE : [[gallery imagedir="directory" resize="0"]]
