web commit by JonasSmedegaard: Fix commands in redpill example.

--- a/doc/todo/l10n.mdwn
+++ b/doc/todo/l10n.mdwn
@@ -86,11 +86,11 @@ only parts of a repository).
 For example use, here's how to roll out a clone of the [Redpill support site](http://support.redpill.dk/):
 
     mkdir -p ~/private_webdata
-    git clone http://source.tedpill.dk/support.git ~/private_webdata/support.redpill.dk
+    git clone http://source.redpill.dk/support.git ~/private_webdata/support.redpill.dk
     cd ~/private_webdata/support.redpill.dk
     make
     mkdir -p ~/public_websites/support.redpill.dk
-    mkdir -p ~/public_websites/source.redpill.dk/support_redpill_content.git/hooks
+    mkdir -p ~/public_websites/source.redpill.dk/support_content.git/hooks
     mkdir -p ~/public_cgi/support.redpill.dk
     make install
 
