web commit by tschwinge: All Thumbnails on One Page

--- a/doc/plugins/contrib/gallery/discussion.mdwn
+++ b/doc/plugins/contrib/gallery/discussion.mdwn
@@ -37,3 +37,9 @@ New version updated at SVN REPO : http://ned.snow-crash.org:8080/svn/ikiwiki-gal
 In the generated files `gallery/index/index.html` and `gallery/index/*/gallery_*`
 it should not be referred to `/js` but to `../../js` and `../../../js`, respectively.
 Likewise for `/css`.
+
+
+# All Thumbnails on One Page
+
+Could `rows="0"` be used to state that all thumbnails should be put on the same page,
+no matter how much there are?
