web commit by http://ccshan.myopenid.com/: expecified -> specified

--- a/doc/plugins/aggregate.mdwn
+++ b/doc/plugins/aggregate.mdwn
@@ -8,7 +8,7 @@ Aggregate a feed as follows
 	feedurl="http://example.com/index.rss"
 	url="http://example.com/" updateinterval="15"]]
 
-That example aggregates posts from the expecified RSS feed, updating no
+That example aggregates posts from the specified RSS feed, updating no
 more frequently than once every 15 minutes, and puts a page per post under
 the example/ directory in the wiki.
 
