--- a/doc/users/tschwinge.mdwn
+++ b/doc/users/tschwinge.mdwn
@@ -7,9 +7,11 @@
 
 With respect to *[[ikiwiki]]* I'm currently working on...
 
-* setting it up for the GNU Hurd's web pages;
-* setting it up as a replacement for the GNU Hurd's previous wiki;
+* setting it up for the [GNU Hurd's web pages](http://www.gnu.org/software/hurd/);
+* setting it up as a replacement for the GNU Hurd's previous wiki (TWiki);
 
 ... and all that while trying to preserve the previous content's history,
-which is stored in a cvs repository for the web pages and whatever backend
-TWiki uses for the previous wiki.
+which is stored in a CVS repository for the web pages and a RCS repository
+for the wiki.
+
+Read [About the TWiki to ikiwiki conversion](http://www.bddebian.com/~wiki/about_the_twiki_to_ikiwiki_conversion/).
