web commit by http://ptecza.myopenid.com/: * I meant that Git is trendy

--- a/doc/news/moved_to_git/discussion.mdwn
+++ b/doc/news/moved_to_git/discussion.mdwn
@@ -5,7 +5,7 @@ ikiwiki to Git. Are there only easier way to maintain and submit patches for
 ikiwiki? It's very interesting for me, because I know you are long-time Subversion
 user and very experienced with it.
 
-I know that Git is very "modern" SCM these days, but I don't understand the hype
+I know that Git is very "trendy" SCM these days, but I don't understand the hype
 about it. This's not only one distributed SCM on the free/open source world.
 Maybe that model of work is better for you, but then you can use also Darcs,
 Mercurial, Bazaar or SVK :)
