--- a/doc/news/moved_to_git/discussion.mdwn
+++ b/doc/news/moved_to_git/discussion.mdwn
@@ -11,3 +11,23 @@ Maybe that model of work is better for you, but then you can use also Darcs,
 Mercurial, Bazaar or SVK :)
 
 --[[Paweł|ptecza]]
+
+> You forgot monotoone. :-)
+> 
+> Of those, only mercurial monotone and git have support in ikiwiki, and the
+> git support seems most mature and is definitely used by the most sites.
+> 
+> I don't consider which rcs is used a permanant or particularly significant
+> decision. I switched to svn with the express idea that sometime (I figured
+> within 10 years, it turned out to be 3), there would be something better,
+> with excellent conversion tools from svn.
+> 
+> At the moment, I'm happy with git, and it's definitely useful to not have
+> to worry about who derserves commit access to ikiwiki, or about next summer's
+> [[soc]] students (if we participate again) having to go through the ad-hoc
+> mess this year's did to contribute.
+> 
+> Being able to git-am < doc/todo/patch.mdwn is also potentially pretty neat. ;-)
+> 
+> --[[Joey]]
+
