--- a/doc/plugins/meta/discussion.mdwn
+++ b/doc/plugins/meta/discussion.mdwn
@@ -10,3 +10,6 @@ Now I've work-arounded it using apostrophes in another way
 (title="Foo ''Bar'' Baz") :)
 
 --[[Paweł|ptecza]]
+
+> As with any other parameter in a [[preprocessordirective]], you can
+> triple-quote, and then include quotation marks inside. --[[Joey]]
