--- a/doc/plugins/meta/discussion.mdwn
+++ b/doc/plugins/meta/discussion.mdwn
@@ -13,3 +13,6 @@ Now I've work-arounded it using apostrophes in another way
 
 > As with any other parameter in a [[preprocessordirective]], you can
 > triple-quote, and then include quotation marks inside. --[[Joey]]
+
+>> Thanks for the hint! Toggle plugin is probably my favourite ikiwiki
+>> plugin, but I forget about that :D --[[Paweł|ptecza]]
