web commit by http://ptecza.myopenid.com/: * Reply

--- a/doc/todo/Configureable_separator_of_page_name.mdwn
+++ b/doc/todo/Configureable_separator_of_page_name.mdwn
@@ -7,3 +7,6 @@ character in ikiwiki?
 > To do this a plugin could overwride the builtin IkiWiki::pagetitle,
 > IkiWiki::titlepage, and IkiWiki::linkpage functions. All the mangling of
 > page names should be cantralised to those functions. --[[Joey]]
+
+>> Do I really need a plugin to do it? What about yet another parameter
+>> for `ikiwiki.setup` file? ;) --[[Paweł|ptecza]]
