web commit by http://ptecza.myopenid.com/: * Reply

--- a/doc/news/moved_to_git/discussion.mdwn
+++ b/doc/news/moved_to_git/discussion.mdwn
@@ -31,3 +31,13 @@ Mercurial, Bazaar or SVK :)
 > 
 > --[[Joey]]
 
+>> Haha, I've also forgotten Arch and Superversion and probably a lot of
+>> another exotic SCMs ;)
+>>
+>> OK, Ikiwiki is your project, so you're the boss here ;)
+>>
+>> BTW, what do you think about migration of Debian projects from
+>> [svn.debian.org](http://svn.debian.org/) to [git.debian.org](http://git.debian.org/)?
+>> Is a good idea to use a few SCM servers by Debian?
+>>
+>> --[[Paweł|ptecza]]
