--- a/doc/plugins/contrib/texinfo.mdwn
+++ b/doc/plugins/contrib/texinfo.mdwn
@@ -25,14 +25,7 @@ is a N-to-M mapping:
 * N Texinfo input files (a main `.texi` file,
   several helper files (`fdl.texi`, `version.texi`, ...), and
   additional text files which are included from the main `.texi`
-  file, e.g. `history.texi`, `libfoo.texi`, `libbar.texi`.
-* M Texinfo output files: the main `.texi` file (which `include`s
-  the other input files) is usually rendered into a (flat) hierarchy
-  of HTML files, one file per node, see the table on
-  <http://www.gnu.org/software/texinfo/manual/texinfo/html_node/#Top>
-  for an example.
-
-How to teach this to ikiwiki?  --[[tschwinge]]
+  file, e.g. `history.texi`, `libfoo.texi`, `libbar.texi`.  --[[tschwinge]]
 
 > As far as multiple input files, you'd need to use add_depends()
 > to let ikiwiki know that a change to any of those files should cause a
@@ -47,6 +40,12 @@ How to teach this to ikiwiki?  --[[tschwinge]]
 
 >> Might it be an option to simply not render the pages that are already
 >> being used as an `include` file for another `.texi` file?  --[[tschwinge]]
+
+* M Texinfo output files: the main `.texi` file (which `include`s
+  the other input files) is usually rendered into a (flat) hierarchy
+  of HTML files, one file per node, see the table on
+  <http://www.gnu.org/software/texinfo/manual/texinfo/html_node/#Top>
+  for an example.  --[[tschwinge]]
 
 > Ikiwiki is perfectly happy with a page creating other files (see eg, the
 > img and teximg plugins, as well as the inline plugin's rss generation).
