web commit by http://www.larted.org.uk/~dom/: patch

--- a/doc/todo/Allow_web_edit_form_comment_field_to_be_mandatory.mdwn
+++ b/doc/todo/Allow_web_edit_form_comment_field_to_be_mandatory.mdwn
@@ -1,3 +1,4 @@
 [[tag wishlist]]
+[[tag patch]]
 
-In our team internal wiki, we wish to impose a policy that all edits must have a comment (patch to follow)
+In our team internal wiki, we wish to impose a policy that all edits must have a comment. Patch in [[debbug 450620]].
