web commit by JoshTriplett: Image link test

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -86,6 +86,7 @@ Bulleted list
 * <http://www.gnu.org/>
 * [GNU](http://www.gnu.org/)
 * [Email](mailto:noone@invalid)
+* [![ikiwiki logo](http://ikiwiki.info/logo/ikiwiki.png)](http://ikiwiki.info)
 
 -----
 
