--- a/doc/bugs/XHTML_needs_xmlns_attribute_on_html_element.mdwn
+++ b/doc/bugs/XHTML_needs_xmlns_attribute_on_html_element.mdwn
@@ -1,3 +1,5 @@
 XHTML needs `xmlns="http://www.w3.org/1999/xhtml"` on the `html` element;
 otherwise, it will not validate.
 --[[JoshTriplett]]
+
+[[done]] --[[JoshTriplett]]
