--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -3,6 +3,9 @@ This is the SandBox, a page anyone can edit to try out ikiwiki.
 ----
 Do re me fa so la te... git!
 
+i see. i see. lalala hmmmmmmmm.
+
+[[sandbox]] does that work? yep. yay!
 
 # テスト。
 
