web commit by http://ptecza.myopenid.com/: * rootpage is a parameter of inline plugin

--- a/doc/blog/discussion.mdwn
+++ b/doc/blog/discussion.mdwn
@@ -16,13 +16,13 @@ take it as far as implementing "replies" to other comments.
 
 ---
 
-## More dynamic `rootpage` parameter?
+## More dynamic `rootpage` parameter of inline plugin?
 
 I prefer to use a current year, month and day to archive my blog posts, for example
 `post/2007/11/12/foo-bar-baz` path is better for me then `post/foo-bar-baz`.
-Unfortunately it seems that `rootpage` parameter is very static. Is it a chance
-to make it more dynamic? Now I have to use `svn mkdir` command to create
-appropriate subdirectories by hand.
+Unfortunately it seems that `rootpage` parameter of inline plugin is very static.
+Is it a chance to make it more dynamic? Now I have to use `svn mkdir` command
+to create appropriate subdirectories by hand.
 
 I think that you could add builtin functions or variables, for example `current_year()`
 or `$CURRENT_YEAR` to usage inside `rootpage` parameter. Something like for Manoj's
