web commit by http://ptecza.myopenid.com/: * Fix signature

--- a/doc/todo/Allow_web_edit_form_comment_field_to_be_mandatory.mdwn
+++ b/doc/todo/Allow_web_edit_form_comment_field_to_be_mandatory.mdwn
@@ -5,6 +5,4 @@ In our team internal wiki, we wish to impose a policy that all edits must have a
 
 > Good idea! I also hate empty commit comments, but I know that it's also a matter
 > of human mentality. Of course, you can forbid users to commit empty comments,
-> but then they can commit so worthless comments like "\*" or "\* blah".
-> 
-> --[[Paweł|ptecza]]
+> but then they can commit so worthless comments like "\*" or "\* blah". --[[Paweł|ptecza]]
