web commit by tschwinge: Should perhaps explain the syntax.  Done that extra-extensively now.  ;-)

--- a/doc/todo/__42__forward__42__ing_functionality_for_the_meta_plugin.mdwn
+++ b/doc/todo/__42__forward__42__ing_functionality_for_the_meta_plugin.mdwn
@@ -9,4 +9,18 @@ How to deal with that?
 
 I can also submit a Git patch, if desired.
 
+
+*Syntax:*
+
+**URL** = http://some.nice/place/ (*etc.*)
+
+**WHITHER** = \[\[**[[wikilink]]**]] | **URL**
+
+**D** = natural number (*meaning seconds*)
+
+**OPT_DELAY** = delay=**D** | empty (*immediatelly*)
+
+\[[meta forward="*WHITHER*" *OPT_DELAY*]]
+
+
 --[[tschwinge]]
