--- a/debian/changelog
+++ b/debian/changelog
@@ -23,7 +23,13 @@ ikiwiki (2.12) UNRELEASED; urgency=low
   * Add xmlns attribute on html element in templates; pages can now
     validate.
 
- -- Josh Triplett <josh@freedesktop.org>  Thu, 08 Nov 2007 12:58:28 -0800
+  [ Joey Hess ]
+  * In the example setup file, use mode 6755 for the git post-update hook.
+    It needs to be setgid if the master repo is a shared repository, so
+    that pushes into the working copy repository happen as the same group,
+    avoiding permissions problems.
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 12 Nov 2007 12:26:45 -0500
 
 ikiwiki (2.11) unstable; urgency=low
 
