not an ikiwiki bug, really

--- a/doc/bugs/Problem_with_umlauts_and_friends.mdwn
+++ b/doc/bugs/Problem_with_umlauts_and_friends.mdwn
@@ -9,3 +9,6 @@ Select *Edit*, log in, have `w3m` spawn an editor for editing the page and notic
 that all umlauts and friends have disappeared.  /!\ If the user now saves the page,
 the mangled page will be entered into the RCS, so don't do this on the ikiwiki
 sandbox page.
+
+> Yes, if you run a web browser in a non-utf8 locale, it can neither
+> display nor properly edit unicode. --[[Joey]]
