--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (2.12) UNRELEASED; urgency=low
+ikiwiki (2.12) unstable; urgency=low
 
   [ Joey Hess ]
   * Fix some issues with toggles in preview mode.
@@ -32,7 +32,7 @@ ikiwiki (2.12) UNRELEASED; urgency=low
     spewing uninitialised value warnings and debug messages about it.
     Dummying up a parent of 0000000 allows gitweb to work too.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 12 Nov 2007 12:48:55 -0500
+ -- Joey Hess <joeyh@debian.org>  Mon, 12 Nov 2007 14:35:09 -0500
 
 ikiwiki (2.11) unstable; urgency=low
 
