--- a/doc/todo/RSS_fields.mdwn
+++ b/doc/todo/RSS_fields.mdwn
@@ -20,4 +20,6 @@ page if it doesn't exist, or to just edit the page if it does.
 Alternatively, the discussion pages could be automatically created when a
 new blog post is created, and then the edit link would work fine.
 
+> I would really like for some additional TMP variables to be present in the rss template as well.  For the inline page template, the CTIME TMPL_VAR results in nice phrases like: <q>Posted late Tuesday morning, November 13th, 2007</q>, and it would be neat to let the planet Debian people see that as well :-) Manoj
+
 [[tag wishlist]]
