web commit by tschwinge: A first idea for an extension.

--- a/doc/todo/__42__forward__42__ing_functionality_for_the_meta_plugin.mdwn
+++ b/doc/todo/__42__forward__42__ing_functionality_for_the_meta_plugin.mdwn
@@ -10,7 +10,7 @@ How to deal with that?
 I can also submit a Git patch, if desired.
 
 
-*Syntax:*
+# Syntax
 
 **URL** = http://some.nice/place/ (*etc.*)
 
@@ -21,6 +21,12 @@ I can also submit a Git patch, if desired.
 **OPT_DELAY** = delay=**D** | empty (*immediatelly*)
 
 \[[meta forward="**WHITHER**" **OPT_DELAY**]]
+
+
+# Extensions and Ideas
+
+It might be doable to add references to pages that refer to the page containg
+the forwarding statement also to the referred-to page.
 
 
 --[[tschwinge]]
