web commit by tschwinge: Add a *Discussion* header.

--- a/doc/todo/__42__forward__42__ing_functionality_for_the_meta_plugin.mdwn
+++ b/doc/todo/__42__forward__42__ing_functionality_for_the_meta_plugin.mdwn
@@ -28,8 +28,10 @@ I can also submit a Git patch, if desired.
 It might be doable to add references to pages that refer to the page containg
 the forwarding statement also to the referred-to page.
 
-
 --[[tschwinge]]
+
+
+# Discussion
 
 > The html scrubber cannot scrub meta headers. So if you emit one
 > containing user-supplied data, it's up to you to scrub it to avoid all
