--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ikiwiki (2.13) UNRELEASED; urgency=low
+
+  * Add liblwpx-paranoidagent-perl to recommends of Debian package,
+    this is needed to do OpenID really securely.
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 13 Nov 2007 14:37:54 -0500
+
 ikiwiki (2.12) unstable; urgency=low
 
   [ Joey Hess ]
