--- a/doc/todo/Allow_web_edit_form_comment_field_to_be_mandatory.mdwn
+++ b/doc/todo/Allow_web_edit_form_comment_field_to_be_mandatory.mdwn
@@ -9,6 +9,6 @@ In our team internal wiki, we wish to impose a policy that all edits must have a
 
 > I don't feel this belongs in ikiwiki core, but would accept a plugin that
 > does it. I think that can be done using a formbuilder_setup hook.
-> BTW, it wmuld probably be better to validate against a comment_regexp,
+> BTW, it wuld probably be better to validate against a `comment_regexp`,
 > so that when the evil admins notice that /.+/ is absurdly easy for users
 > to get around (by using " "), they can tighten it down. --[[Joey]]
